src/test/deca/syntax/valid/inexp_list.deca
//Description
//    Vérifier la syntaxe des inexp
//
//Résultats :
//   Ok
//

{
if(3>4){;}
if(3>=4){;}
if(3<4){;}
if(3<=4){;}
if(3 != 4){;}
if(3 == 3){;}
}
