src/test/deca/syntax/invalid/parenthese3.deca
//Description
//    Vérifier la considération des parenthèses
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
if(a==2){;} elseif(a==3{;}
}
